--- a/styles.css
+++ b/styles.css
@@ -5,15 +5,17 @@ body{
     justify-content: center;
 }
 
-h1{
+.displayer{
     text-align: center;
     position: absolute;
     bottom: 100px;
+    visibility: hidden;
 }
 
 .container{
     width: 500px;
     height: 500px;
+    visibility: hidden;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
@@ -75,3 +77,52 @@ h1{
     border-top: 5px solid black;
 }
 
+
+
+@keyframes slidingIn {
+    0% {opacity: 0%;}
+    10% {opacity: 10%;}
+    20% {opacity: 20%;}
+    30% {opacity: 30%;}
+    40% {opacity: 40%;}
+    50% {opacity: 50%;}
+    60% {opacity: 60%;}
+    70% {opacity: 70%;}
+    80% {opacity: 80%;}
+    90% {opacity: 90%;}
+    100% {opacity: 100%;}
+}
+
+
+.sliderGame{
+    width: 600px;
+    height: 600px;
+    position: absolute;
+    border: 2px solid blue;
+    margin: 0;
+    animation-name: slidingIn;
+    animation-duration: 5s;
+    opacity: 100%;
+    background-color: red;
+    
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    align-items: center;
+    justify-items: center;
+}
+
+.play{
+    width: 100px;
+    height: 50px;
+}
+
+.restartGame{
+    visibility: hidden;
+    width: 100px;
+    height: 50px;
+    position:absolute;
+    margin-left: auto;
+    margin-right: auto;
+    bottom: 50px;
+}
